<resources>
    <string name="app_name">VigilanceTimer</string>
    <string name="tab_text_1">TRIAL A</string>
    <string name="tab_text_2">TRIAL B</string>
    <string name="tab_text_3">TRIAL C</string>
    <string name="focusWall">靠墙</string>
    <string name="focusAisle">靠路</string>
    <string name="focusOpposite">向对面</string>
    <string name="focusSide">向侧面</string>
    <string name="focusBack">向背面</string>
    <string name="focusMale">男</string>
    <string name="focusFemale">女</string>
    <string name="startTrial">开始观察</string>
    <string name="endTrial">结束观察</string>
    <string name="startVigilance">警戒</string>
    <string name="endVigilance">结束警戒</string>
    <string name="startPhone">手机起</string>
    <string name="endPhone">手机放</string>
    <string name="miscInfo">补全信息</string>
    <string name="miscInfoTitle">杂项信息补全</string>
    <string name="saveMiscInfo">保存并退出</string>
    <string name="trialGenderTitle">被观察者性别</string>
    <string name="groupSizeTitle">Group Size</string>
    <string name="groupSize">Group Size（输入整数）</string>
    <string name="isFullRecTitile">是否为完整记录</string>
    <string name="isFullRec">是</string>
    <string name="notFullRec">否</string>
    <string name="isUseEarphoneTitle">是否使用耳机</string>
    <string name="isEarphone">是</string>
    <string name="notEarphone">否</string>
    <string name="writeSuccess">写入成功</string>
    <string name="foodTitle">食物种类</string>
    <string name="foodType">输入食物种类</string>
    <string name="uploadPrompt">上传数据</string>
    <string name="uploadConfirm">确认上传到数据库？</string>
    <string name="doUpload">上传</string>
    <string name="notUplaod">不上传</string>
    <string name="cancel">取消</string>
    <string name="extraInfoTitle">备注</string>
    <string name="extraInfo">输入备注</string>
    <string name="exitPrompt">按两次返回键退出</string>
</resources>