<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.main.PlaceholderFragment">

        <Button
            android:id="@+id/startVigilance"
            android:layout_width="125dp"
            android:layout_height="285dp"
            android:layout_marginTop="44dp"
            android:text="@string/startVigilance"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="@+id/startTrial"
            app:layout_constraintTop_toBottomOf="@+id/startTrial" />

        <Button
            android:id="@+id/startTrial"
            android:layout_width="339dp"
            android:layout_height="102dp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="72dp"
            android:layout_marginEnd="36dp"
            android:text="@string/startTrial"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/miscInfo"
            android:layout_width="155dp"
            android:layout_height="90dp"
            android:layout_marginTop="63dp"
            android:layout_marginBottom="79dp"
            android:text="@string/miscInfo"
            android:textColor="#F44336"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/startTrial"
            app:layout_constraintTop_toBottomOf="@+id/focusDirection" />

        <Button
            android:id="@+id/startPhone"
            android:layout_width="155dp"
            android:layout_height="90dp"
            android:layout_marginTop="59dp"
            android:layout_marginBottom="79dp"
            android:text="@string/startPhone"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/startTrial"
            app:layout_constraintTop_toBottomOf="@+id/startVigilance" />

        <RadioGroup
            android:id="@+id/focusDirection"
            android:layout_width="115dp"
            android:layout_height="281dp"
            android:layout_marginTop="44dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="@+id/startTrial"
            app:layout_constraintTop_toBottomOf="@+id/startTrial">

            <RadioButton
                android:id="@+id/focusOpposite"
                android:layout_width="wrap_content"
                android:layout_height="56dp"
                android:layout_weight="1"
                android:baselineAligned="true"
                android:text="@string/focusOpposite"
                android:textSize="24sp" />

            <RadioButton
                android:id="@+id/focusSide"
                android:layout_width="wrap_content"
                android:layout_height="56dp"
                android:layout_weight="1"
                android:baselineAligned="true"
                android:text="@string/focusSide"
                android:textSize="24sp" />

            <RadioButton
                android:id="@+id/focusBack"
                android:layout_width="wrap_content"
                android:layout_height="56dp"
                android:layout_weight="1"
                android:baselineAligned="true"
                android:text="@string/focusBack"
                android:textSize="24sp" />
        </RadioGroup>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>